--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -22,7 +22,7 @@
 
       <pa-input
         formControlName="webhook"
-        help="account.nua_webhook.help">
+        help="account.nua_webhook_help">
         {{ 'account.nua_webhook' | translate }}
       </pa-input>
 
