--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -29,7 +29,7 @@
         <a
           [routerLink]="'./history'"
           routerLinkActive="active">
-          {{ 'billing.history' | translate }}
+          {{ 'billing.history.link' | translate }}
         </a>
       </li>
     </ul>
