--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -115,7 +115,7 @@
             <pa-input
               id="phone"
               formControlName="phone"
-              [placeholder]="'billing.phone.help' | translate"
+              [placeholder]="'billing.phone_placeholder' | translate"
               [errorMessages]="errors"
               externalLabel></pa-input>
           </div>
