--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/training-history/training-history.component.html
@@ -16,7 +16,7 @@
         <pa-table-cell header>{{ 'generic.date' | translate }}</pa-table-cell>
         <pa-table-cell header>{{ 'generic.time' | translate }}</pa-table-cell>
         <pa-table-cell header>ID</pa-table-cell>
-        <pa-table-cell header>{{ 'training.status' | translate }}</pa-table-cell>
+        <pa-table-cell header>{{ 'training.status.header' | translate }}</pa-table-cell>
         <pa-table-cell header>{{ 'generic.result' | translate }}</pa-table-cell>
       </pa-table-header>
       <pa-table-row
