--- a/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set-list/label-set-list.component.html
@@ -39,7 +39,7 @@
           aspect="basic"
           kind="destructive"
           (click)="delete(labelSet.key, labelSet.value)">
-          {{ 'label-set.delete' | translate }}
+          {{ 'label-set.delete.label' | translate }}
         </pa-button>
       </div>
     </pa-expander-header-side-block>
