--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -69,7 +69,7 @@
 
       <div class="form-section-container align-top">
         <label class="title-xxs">
-          {{ 'label-set.form.labels' | translate }}
+          {{ 'label-set.form.labels.title' | translate }}
         </label>
         <div>
           <div>{{ 'label-set.form.labels-description' | translate }}</div>
