--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -31,7 +31,7 @@
           <label
             class="title-s"
             for="radio-group-resource-thumbnail">
-            {{ 'resource.thumbnail' | translate }}
+            {{ 'resource.thumbnail.label' | translate }}
           </label>
           <div class="body-s">{{ 'resource.thumbnail.help' | translate }}</div>
         </div>
@@ -156,7 +156,7 @@
         <label
           class="title-s"
           for="extra">
-          {{ 'resource.extra-metadata' | translate }}
+          {{ 'resource.extra-metadata.label' | translate }}
         </label>
         <pa-toggle [(value)]="editExtraMetadata">Edit extra metadata</pa-toggle>
         <div class="extra-metadata-container">
