--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -13,7 +13,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }">
             <pa-icon name="home"></pa-icon>
-            <span class="nav-link-title">{{ 'stash.home' | translate }}</span>
+            <span class="nav-link-title">{{ 'stash.home.link' | translate }}</span>
           </a>
         </div>
       </div>
