--- a/libs/common/src/lib/search/search.component.html
+++ b/libs/common/src/lib/search/search.component.html
@@ -17,7 +17,7 @@
       [value]="enabledAnswer"
       (valueChange)="toggleAnswer($event)"
       labelOnRight>
-      {{ 'stash.search.toggle-answer' | translate }}
+      {{ 'stash.search-toggle-answer' | translate }}
     </pa-toggle>
   </div>
 
