Fix create kb button label on select-kb page

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -70,7 +70,7 @@
     <pa-button
       *ngIf="!addKb && (standalone || (canAddKb | async) === true)"
       (click)="toggleForm()">
-      {{ 'stash.create' | translate }}
+      {{ 'stash.create.title' | translate }}
     </pa-button>
 
     <ng-container *ngIf="addKb">
