--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -52,7 +52,7 @@
         formGroupName="config"
         *ngFor="let conf of displayedLearningConfigurations">
         <div class="label">
-          <label class="title-s">{{ 'stash.create.' + conf.id | translate }}</label>
+          <label class="title-s">{{ 'stash.create.' + conf.id + '.label' | translate }}</label>
           <div>
             <small>{{ 'stash.create.' + conf.id + '.help' | translate }}</small>
           </div>
