Fix translation keys in resource edition flow

--- a/libs/common/src/lib/resources/edit-resource/add-field/add-field.component.html
+++ b/libs/common/src/lib/resources/edit-resource/add-field/add-field.component.html
@@ -67,7 +67,7 @@
           [isUploading]="isSaving"
           (file)="onFileChange($event)"></stf-dropzone>
         <p *ngIf="newFile">
-          <strong>{{ 'resource.field-file.new-file.label' | translate }}</strong>
+          <strong>{{ 'resource.field-file-new-file' | translate }}</strong>
           {{ newFile.name }}
         </p>
       </ng-container>
