--- a/libs/common/src/lib/resources/edit-resource/profile/file/file.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/file/file.component.html
@@ -1,14 +1,14 @@
 <div class="main-container">
   <div class="scrollable-area">
     <ng-container *ngIf="(field | async)?.value">
-      <p [innerHTML]="'resource.field-file.dropzone-label' | translate: { filename: (filename | async) }"></p>
+      <p [innerHTML]="'resource.field-file-dropzone-label' | translate: { filename: (filename | async) }"></p>
       <stf-dropzone
         [isUploading]="isUploading"
         (file)="newFile = $event"></stf-dropzone>
     </ng-container>
 
     <p *ngIf="newFile">
-      <strong>{{ 'resource.field-file.new-file' | translate }}</strong>
+      <strong>{{ 'resource.field-file-new-file' | translate }}</strong>
       {{ newFile.name }}
     </p>
   </div>
