--- a/libs/common/src/lib/resources/edit-resource/dropzone/dropzone.component.html
+++ b/libs/common/src/lib/resources/edit-resource/dropzone/dropzone.component.html
@@ -5,7 +5,7 @@
   (fileOver)="fileOverBase($event)"
   (atFileDrop)="uploadFile($event)"
   (click)="chooseFiles($event)">
-  <span *ngIf="!isUploading">{{ 'resource.field-file.dropzone' | translate }}</span>
+  <span *ngIf="!isUploading">{{ 'resource.field-file-dropzone' | translate }}</span>
   <nsi-spinner
     *ngIf="isUploading"
     size="small"></nsi-spinner>
