Add `displayMetadata` feature to the widget
when not set, we don't display the metadata on the result row

--- a/libs/search-widget/src/components/result-row/ResultRow.scss
+++ b/libs/search-widget/src/components/result-row/ResultRow.scss
@@ -28,6 +28,7 @@
       var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1) +
         var(--expanded-paragraph-height)
     );
+    margin-top: var(--rhythm-1);
     overflow: hidden;
     transition: height var(--transition-fast);
 
